--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </section>
 
 
-<section id="news" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+<!-- <section id="news" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
 <div class="row">
@@ -212,6 +212,47 @@
 Please stay tuned for what’s next!</li>
 
 </ul>
+    </div>
+</div>
+    </div>
+  </section> -->
+
+  <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+    <div class="container">
+
+<div class="row">
+
+    <div class="col-lg-12">
+      <h1>Ongoing Projects</h1>
+    </div>
+    <div class="row">
+        <ul class="ul-papers">
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
+    	    <p class="authors">Changmin Lee, <b>Jihyun Lee</b>, Tae-Kyun Kim<br/></p>
+    	    <p class="venue">NeurIPS 2025<br>
+                <p class="resources">
+    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
+    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Jihyun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
+    	    <p class="venue">NeurIPS 2025<br>
+                <p class="resources">
+    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
+
+
+
+        </ul>
     </div>
 </div>
     </div>
@@ -420,7 +461,7 @@ Please stay tuned for what’s next!</li>
   </section>
 
 
-<section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+<!-- <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
 <div class="row">
@@ -448,7 +489,7 @@ Please stay tuned for what’s next!</li>
     </div>
 </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="teachinig_experiences" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
