--- a/index.html
+++ b/index.html
@@ -491,18 +491,16 @@ Please stay tuned for what’s next!</li>
     </div>
   </section> -->
 
-  <section id="teachinig_experiences" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+  <section id="Skills" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
 <div class="row">
     <div class="col-lg-12" style="line-height: 180% !important;">
-      <h1>Teaching Experiences</h1>
+      <h1>Skills</h1>
 <ul>
-	<li>Teaching Assistant, Artificial Intelligence and Machine Learning, 2021-2023, KAIST</li>
-	<li>Teaching Assistant, Machine Learning for Computer Vision, 2021-2022, KAIST</li>
-	<li>Teaching Assistant, Operating System, 2020, Handong Global University</li>
-	<li>Teaching Assistant, C++ Programming, 2019, Handong Global University</li>
-	<li>Teaching Assistant, Data Structure, 2018, Handong Global University</li>
+	<li>Main Language & DeepLearning Library: Python & Pytorch</li>
+	<li>Familiar Libraries: SMPL-X, Pytorch3D, Trimesh </li>
+	<li>Familiar Graphic Tool: Blender</li>
 </ul>
     </div>
 </div>
