--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
       <div class="portrait-title">
         <h2>Seungeun Lee</h2>
       </div>
-      <a href="resources/cv.pdf"><b>CV</b></a>
-        | <a href="https://scholar.google.com/citations?user=UaMiOq8AAAAJ&hl=en"><b>Google Scholar</b></a>
+          <a href="resources/cv.pdf"><b>CV</b></a>
+          <a href="resources/cv.pdf"><b>Portfolio (Research Highlight & Job Fit)</b></a>
+        <!-- | <a href="https://scholar.google.com/citations?user=UaMiOq8AAAAJ&hl=en"><b>Google Scholar</b></a>
         | <a href="https://github.com/jyunlee"><b>GitHub</b></a> <br>
          <a href="https://www.linkedin.com/in/jihyun-lee-b51861238/"><b>LinkedIn</b></a>
-        | <a href="https://x.com/jyun_leee"><b>X</b></a>
+        | <a href="https://x.com/jyun_leee"><b>X</b></a> -->
       <br>
       <br>
       </td>
@@ -193,7 +194,8 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">B.S. in Information and Communication Engineering (Currently, Electrical and Electronic Engineering), Inha University</p>
+              <p class="course">B.S. in Information and Communication Engineering, Inha University</p>
+               <!-- (Currently, Electrical and Electronic Engineering) -->
               <p class="institution">2017 - 2021</p>
             </div>
           </li>
@@ -235,7 +237,7 @@ Please stay tuned for what’s next!</li>
 <div class="row">
 
     <div class="col-lg-12">
-      <h1>Ongoing Projects</h1>
+      <h1>Featured Projects</h1>
     </div>
     <div class="row">
         <ul class="ul-papers">
@@ -250,6 +252,17 @@ Please stay tuned for what’s next!</li>
     	    <p class="venue">NeurIPS 2025<br>
                 <p class="resources">
     	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
+    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Seungeun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
+    	    <p class="venue">NeurIPS 2025<br>
+                <p class="resources">
+    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
 
           <li>
                 <div class="img">
@@ -277,11 +290,54 @@ Please stay tuned for what’s next!</li>
 <div class="row">
 
     <div class="col-lg-12">
+      <h1>Preprint</h1>
+    </div>
+    <div class="row">
+        <ul class="ul-papers">
+
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
+    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Tae-Kyun Kim<br/></p>
+    	    <p class="venue">NeurIPS 2025<br>
+                <p class="resources">
+    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
+    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Seungeun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
+    	    <p class="venue">NeurIPS 2025<br>
+                <p class="resources">
+    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
+
+
+
+
+        </ul>
+    </div>
+</div>
+    </div>
+  </section>
+
+  <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+    <div class="container">
+
+<div class="row">
+
+    <div class="col-lg-12">
       <h1>Publications</h1>
     </div>
     <div class="row">
         <ul class="ul-papers">
-		* Full publication list (including domestic publications) is available in my <a href="resources/cv.pdf">CV</a>.
+		<!-- * Full publication list (including domestic publications) is available in my <a href="resources/cv.pdf">CV</a>. -->
 
 
           <li>
@@ -510,7 +566,7 @@ Please stay tuned for what’s next!</li>
     <div class="col-lg-12" style="line-height: 180% !important;">
       <h1>Skills</h1>
 <ul>
-	<li><b>Main Language & DeepLearning Library: </b>Python & Pytorch</li>
+	<li><b>Main Language & Deep Learning Library: </b>Python & Pytorch</li>
 	<li><b>Familiar Libraries: </b>SMPL-X, Pytorch3D, Trimesh </li>
 	<li><b>Familiar Graphic Tool: </b>Blender</li>
 </ul>
