--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
       <div class="portrait-title">
         <h2>Seungeun Lee</h2>
       </div>
-          <a href="resources/cv.pdf"><b>CV</b></a>
-          <a href="resources/cv.pdf"><b>Portfolio (Research Highlight & Job Fit)</b></a>
+          <a href="resources/cv.pdf"><b>CV</b></a> |
+          <a href="resources/cv.pdf"><b>Portfolio (Job Fit Slides) </b></a>
         <!-- | <a href="https://scholar.google.com/citations?user=UaMiOq8AAAAJ&hl=en"><b>Google Scholar</b></a>
         | <a href="https://github.com/jyunlee"><b>GitHub</b></a> <br>
          <a href="https://www.linkedin.com/in/jihyun-lee-b51861238/"><b>LinkedIn</b></a>
