--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2>Seungeun Lee</h2>
       </div>
           <a href="resources/cv.pdf"><b>CV</b></a> |
-          <a href="resources/cv.pdf"><b>Portfolio (Job Fit Slides) </b></a>
+          <a href="resources/cv.pdf"><b>Portfolio (Job Talk Slides) </b></a>
         <!-- | <a href="https://scholar.google.com/citations?user=UaMiOq8AAAAJ&hl=en"><b>Google Scholar</b></a>
         | <a href="https://github.com/jyunlee"><b>GitHub</b></a> <br>
          <a href="https://www.linkedin.com/in/jihyun-lee-b51861238/"><b>LinkedIn</b></a>
@@ -159,7 +159,7 @@
   <br>
   <!-- <p>Hello! 👋 I am a Postdoctoral AI Research Scientist at Meta (Codec Avatars Lab), where I am fortunate to work with <a href="https://shunsukesaito.github.io/">Shunsuke Saito</a>. Previously, I obtained my Ph.D. at <a href="https://kaist.ac.kr/">KAIST</a> advised by <a href="https://sites.google.com/view/tkkim/home">Tae-Kyun (T-K) Kim</a> and <a href="https://mhsung.github.io/">Minhyuk Sung</a>. In 2024, I visited <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> as a research scientist intern, hosted by <a href="https://scholar.google.com/citations?user=ss-IvjMAAAAJ&hl=en">Jason Saragih</a>. -->
   
-  <p>Hello! 👋 I am a AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the Ulsan National Institute of Science and Technology (UNIST), where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab (currently, the Medical Information Processing Lab)</a>, under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
+  <p>Hello! 👋 I am a AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
   </p>
 
   <p>My research lies at the intersection of computer vision, deep learning, and 3D shape analysis, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
@@ -187,14 +187,15 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">M.S. in Computer Science and Engineering, UNIST</p>
+              <p class="course">M.S. in UNIST</p>
               <p class="institution">2021 - 2023</p>
             </div>
           </li>
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">B.S. in Information and Communication Engineering, Inha University</p>
+              <!-- <p class="course">B.S. in Information and Communication Engineering, Inha University</p> -->
+              <p class="course">B.S. in Inha University</p>
                <!-- (Currently, Electrical and Electronic Engineering) -->
               <p class="institution">2017 - 2021</p>
             </div>
@@ -222,7 +223,7 @@
   <li><b>Jul 2025:</b>  I’ll be giving a talk at the Doctoral Consortium and presenting an invited poster on <a href="https://jyunlee.github.io/projects/rewind/">REWIND</a> at the <a href="https://kcvs.kr/?act=info.workshop&pseq=8">KCCV 2025</a>.</li>
   <li><b>Jul 2025:</b>  <a href="https://tkhkaeio.github.io/projects/25-scgen/index.html">SCGen</a> is accepted to ICCV 2025. Congratulations to the lead author, <a href="https://tkhkaeio.github.io/">Take</a>!</li>
   <li><b>Jun 2025:</b>  I’m attending CVPR 2025 to present my recent work, <a href="https://jyunlee.github.io/projects/rewind/">REWIND</a>, done during my internship at Meta. I’ll also be presenting an invited poster at the <a href="https://egovis.github.io/cvpr25/#">EgoVis Workshop</a>.</li>
-	<li><b>Jun 2025:</b>  Successfully defended my Ph.D.! 🎓 I sincerely thank <a href="https://sites.google.com/view/tkkim/home">Prof. Tae-Kyun Kim</a>, <a href="https://mhsung.github.io/">Prof. Minhyuk Sung</a>, <a href="https://maga33.github.io/">Prof. Seunghoon Hong</a>, <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>, and <a href="https://www.vcai.korea.ac.kr/members/principal-investigator">Prof. Gyeongsik Moon</a> for serving on my thesis committee.
+	<li><b>Jun 2025:</b>  Successfully defended my Ph.D.! 🎓 I sincerely thank <a href="https://sites.google.com/view/tkkim/home">Prof. Ilwoo Lyu</a>, <a href="https://mhsung.github.io/">Prof. Minhyuk Sung</a>, <a href="https://maga33.github.io/">Prof. Seunghoon Hong</a>, <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>, and <a href="https://www.vcai.korea.ac.kr/members/principal-investigator">Prof. Gyeongsik Moon</a> for serving on my thesis committee.
 Please stay tuned for what’s next!</li>
 
 </ul>
@@ -248,7 +249,7 @@ Please stay tuned for what’s next!</li>
                 </div>
               <div class="description">
                 <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
-    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Tae-Kyun Kim<br/></p>
+    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Ilwoo Lyu<br/></p>
     	    <p class="venue">NeurIPS 2025<br>
                 <p class="resources">
     	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
@@ -302,7 +303,7 @@ Please stay tuned for what’s next!</li>
                 </div>
               <div class="description">
                 <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
-    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Tae-Kyun Kim<br/></p>
+    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Ilwoo Lyu<br/></p>
     	    <p class="venue">NeurIPS 2025<br>
                 <p class="resources">
     	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
@@ -338,6 +339,52 @@ Please stay tuned for what’s next!</li>
     <div class="row">
         <ul class="ul-papers">
 		<!-- * Full publication list (including domestic publications) is available in my <a href="resources/cv.pdf">CV</a>. -->
+          
+
+          
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">Spherical Diffusion Process for Score-Guided Cortical Correspondence via Spectral Attention</p>
+    	    <p class="authors"><b>Seungeun Lee</b>, Sergey Pyatkovskiy, Jaejun Yoo, Ilwoo Lyu<br/></p>
+    	    <p class="venue">MICCAI, 2025<br>
+                <p class="resources">
+    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">SPHARM-Reg: Unsupervised Cortical Surface Registration using Spherical Harmonics</p>
+    	    <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Sunghwa Ryu, Ilwoo Lyu<br/></p>
+    	    <p class="venue">IEEE Transaction on Medical Imaging, 2025<br>
+                <p class="resources">
+    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://ieeexplore.ieee.org/document/11045740">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">Leveraging Input-Level Feature Deformation with Guided-Attention for Sulcal Labeling</p>
+    	    <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Ethan Willbrand, Benjamin Parker, Silvia Bunge, Kevin Weiner, Ilwoo Lyu<br/></p>
+    	    <p class="venue">IEEE Transaction on Medical Imaging, 2024<br>
+                <p class="resources">
+    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://ieeexplore.ieee.org/document/10695448">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+
+          <li>
+                <div class="img">
+                  <img src="/resources/paper/face-texture-perceiver.png" class="img-responsive" alt="">
+                </div>
+              <div class="description">
+                <p class="title">Facial Texure Perceiver: Towards High-Fidelity Facial Texture Recovery with Input-Level Inductive Biased Perceiver IO</p>
+    	    <p class="authors"><b>Seungeun Lee</b></p>
+    	    <p class="venue">ICASSP 2023<br>
+                <p class="resources">
+    	    <a href="https://ieeexplore.ieee.org/document/10096776">[Paper]</a> 
 
 
           <li>
@@ -346,7 +393,7 @@ Please stay tuned for what’s next!</li>
                 </div>
               <div class="description">
                 <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
-    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Tae-Kyun Kim<br/></p>
+    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Ilwoo Lyu<br/></p>
     	    <p class="venue">NeurIPS 2025<br>
                 <p class="resources">
     	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
@@ -392,7 +439,7 @@ Please stay tuned for what’s next!</li>
           <div class="description">
             <p class="title">REWIND: Real-Time Egocentric Whole-Body Motion Diffusion with Exemplar-Based Identity Conditioning</p>
 	    <p class="authors"><b>Seungeun Lee</b>, Weipeng Xu, Alexander Richard, Shih-En Wei, Shunsuke Saito, Shaojie Bai, Te-Li Wang, Minhyuk Sung,</p>
-      <p class="authors">Tae-Kyun Kim, Jason Saragih<br/></p>
+      <p class="authors">Ilwoo Lyu, Jason Saragih<br/></p>
 	    <p class="venue">CVPR 2025<br>
             <p class="resources">
 	    <a href="https://jyunlee.github.io/projects/rewind/">[Project]</a> <a href="https://arxiv.org/pdf/2504.04956">[Paper]</a>
@@ -406,7 +453,7 @@ Please stay tuned for what’s next!</li>
           <div class="description">
             <p class="title">Dense Hand-Object(HO) GraspNet with Full Grasping Taxonomy and Dynamics</p>
 	    <p class="authors">Woojin Cho, <b>Seungeun Lee</b>, Minjae Yi, Minje Kim, Taeyun Woo, Donghwan Kim, Taewook Ha, Hyokeun Lee, Je-Hwan Ryu,<p>
-	    <p class="authors">Woontack Woo, Tae-Kyun Kim<br/></p>
+	    <p class="authors">Woontack Woo, Ilwoo Lyu<br/></p>
 	    <p class="venue">ECCV 2024<br>
             <p class="resources">
 	    <a href="https://hograspnet2024.github.io">[Project]</a> <a href="https://www.arxiv.org/pdf/2409.04033">[Paper]</a> <a href="https://github.com/kaist-uvr-lab/HOGraspNet">[Code]</a>
@@ -417,7 +464,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">InterHandGen: Two-Hand Interaction Generation via Cascaded Reverse Diffusion</p>
-            <p class="authors"><b>Seungeun Lee</b>, Shunsuke Saito, Giljoo Nam, Minhyuk Sung, Tae-Kyun Kim<br/></p>
+            <p class="authors"><b>Seungeun Lee</b>, Shunsuke Saito, Giljoo Nam, Minhyuk Sung, Ilwoo Lyu<br/></p>
 	    <p class="venue">CVPR 2024<br>
             <p class="resources">
 	    <a href="https://jyunlee.github.io/projects/interhandgen/">[Project]</a>  <a href="https://arxiv.org/pdf/2403.17422.pdf">[Paper]</a> <a href="https://github.com/jyunlee/InterHandGen">[Code]</a>
@@ -428,7 +475,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">FourierHandFlow: Neural 4D Hand Representation Using Fourier Query Flow</p>
-            <p class="authors"><b>Seungeun Lee</b>, Junbong Jang, Donghwan Kim, Minhyuk Sung, Tae-Kyun Kim<br/></p>
+            <p class="authors"><b>Seungeun Lee</b>, Junbong Jang, Donghwan Kim, Minhyuk Sung, Ilwoo Lyu<br/></p>
 	    <p class="venue">NeurIPS 2023<br>
             <p class="resources">
 	    <a href="https://jyunlee.github.io/projects/fourier-hand-flow/">[Project]</a> <a href="https://arxiv.org/pdf/2307.08100.pdf">[Paper]</a> <a href="https://github.com/jyunlee/FourierHandFlow">[Code]</a>
@@ -439,7 +486,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">Im2Hands: Learning Attentive Implicit Representation of Interacting Two-Hand Shapes</p>
-            <p class="authors"><b>Seungeun Lee</b>, Minhyuk Sung, Honggyu Choi, Tae-Kyun Kim<br/></p>
+            <p class="authors"><b>Seungeun Lee</b>, Minhyuk Sung, Honggyu Choi, Ilwoo Lyu<br/></p>
 	    <p class="venue">CVPR 2023<br>
             <p class="resources">
 	    <a href="https://jyunlee.github.io/projects/implicit-two-hands/">[Project]</a> <a href="https://arxiv.org/pdf/2302.14348.pdf">[Paper]</a> <a href="https://github.com/jyunlee/Im2Hands">[Code]</a> <a href="https://youtu.be/hBSeN222Um4">[Presentation]</a> <a href="https://jyunlee.github.io/projects/implicit-two-hands/data/cvpr2023_poster.pdf" class="image fit" type="application/pdf">[Poster]</a>
@@ -450,7 +497,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">Contrastive Knowledge Distillation for Anomaly Detection in Multi-Illumination/Focus Display Images</p>
-            <p class="authors">Hangil Park*, <b>Seungeun Lee</b>*, Yongmin Seo, Taewon Min, Joodong Yun, Jaewon Kim, Tae-Kyun Kim (* equal contributions)<br/></p>
+            <p class="authors">Hangil Park*, <b>Seungeun Lee</b>*, Yongmin Seo, Taewon Min, Joodong Yun, Jaewon Kim, Ilwoo Lyu (* equal contributions)<br/></p>
 	    <p class="venue">MVA 2023 (oral)<br>
 	    <span style="font-weight:normal"><i>Writen as a report of an industrial research project with Samsung Display</i></p>
             <p class="resources">
@@ -463,7 +510,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">Pop-Out Motion: 3D-Aware Image Deformation via Learning Shape Laplacian</p>
-            <p class="authors"><b>Seungeun Lee</b>*, Minhyuk Sung*, Hyunjin Kim, Tae-Kyun Kim (* equal contributions)<br/></p>
+            <p class="authors"><b>Seungeun Lee</b>*, Minhyuk Sung*, Hyunjin Kim, Ilwoo Lyu (* equal contributions)<br/></p>
             <p class="venue">CVPR 2022<br>
             <p class="resources">
 	    <a href="https://jyunlee.github.io/projects/pop-out-motion/">[Project]</a> <a href="https://arxiv.org/pdf/2203.15235.pdf">[Paper]</a> <a href="https://github.com/jyunlee/Pop-Out-Motion">[Code]</a> <a href="https://youtu.be/Nix4m6W6AW0">[Presentation]</a> <a href="https://jyunlee.github.io/projects/pop-out-motion/data/cvpr2022_poster.pdf" class="image fit" type="application/pdf">[Poster]</a>
@@ -477,7 +524,7 @@ Please stay tuned for what’s next!</li>
             </div>
           <div class="description">
             <p class="title">Face Parsing from RGB and Depth Using Cross-Domain Mutual Learning</p>
-            <p class="authors"><b>Seungeun Lee</b>, Binod Bhattarai, Tae-Kyun Kim<br/></p>
+            <p class="authors"><b>Seungeun Lee</b>, Binod Bhattarai, Ilwoo Lyu<br/></p>
             <p class="venue">CVPRW 2021 (oral) - IEEE AMFG acceptance rate: 27%<br>
             <p class="resources">
 	    <a href="https://openaccess.thecvf.com/content/CVPR2021W/AMFG/papers/Lee_Face_Parsing_From_RGB_and_Depth_Using_Cross-Domain_Mutual_Learning_CVPRW_2021_paper.pdf">[Paper]</a> <a href="https://github.com/jyunlee/CelebAMask-HQ-D_LaPa-D_Helen-D">[Dataset]</a>
