--- a/index.html
+++ b/index.html
@@ -399,15 +399,17 @@ Please stay tuned for what’s next!</li>
 	<div class="col-lg-12">
       <h1>Awards &amp; Honors</h1>
 <ul>
-	<li style="line-height:150%"><b>Outstanding Reviewer 2024, ECCV</b></li>
+	<!-- <li style="line-height:150%"><b>Outstanding Reviewer 2024, ECCV</b></li>
 	<li style="line-height:150%"><b>Outstanding TA Award 2022, KAIST</b></li>
-	- <i>Awarded to TAs who earned the highest ratings on KAIST CS student survey</i>
-	<li><b>Excellence Award <span style="color:#BB2222">(Mayoral Award)</span> at Korea Software Convergence Hackathon 2019, Ministry of Science and ICT of Korea</b></li>
+	- <i>Awarded to TAs who earned the highest ratings on KAIST CS student survey</i> -->
+  <li style="line-height:150%"><b>3rd Place of RHOBIN Challenge at CVPR 2024 </b> <a href="/resources/certificate/certificate_rhobin.pdf">[Certificate]</a></li>
+	- <i>3D body contact estimation from single RGB images.</i>
+	<!-- <li><b>Excellence Award <span style="color:#BB2222">(Mayoral Award)</span> at Korea Software Convergence Hackathon 2019, Ministry of Science and ICT of Korea</b></li>
 	- <i>Developed an automatic traffic light control system based on reinforcement learning</i>
 	<li><b>Honorable Mention Award at Undergraduate Student Paper Competition 2019, Korea Software Congress (KSC) and Korea Computer Congress (KCC)</b></li>
 	- <i>Proposed a method to reduce the blocking effects of DCT-based X-ray grid line suppression techniques</i>
 	<li><b>Silver Prize at Undergraduate Student Paper Competition 2018, Korea Information Processing Society (KIPS)</b></li>
-	- <i>Proposed a DCT-based X-ray grid line suppression method using dynamic segmentation</i>
+	- <i>Proposed a DCT-based X-ray grid line suppression method using dynamic segmentation</i> -->
 </ul>
     </div>
 </div>
