--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         <li class="nav-item">
           <a class="nav-link " href="/#about" data-target="#about"><span>Home</span></a>
         </li>
+        
+        <li class="nav-item">
+          <a class="nav-link " href="/#projects" data-target="#projects"><span>Projects</span></a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link " href="/#papers" data-target="#papers"><span>Publications</span></a>
@@ -112,7 +116,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link " href="/#activities" data-target="#activities"><span>Activities</span></a>
+          <a class="nav-link " href="/#skills" data-target="#skills"><span>Skills</span></a>
         </li>
 
 
@@ -162,7 +166,7 @@
   <p>Hello! 👋 I am a AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
   </p>
 
-  <p>My research lies at the intersection of computer vision, deep learning, and 3D shape analysis, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
+  <p>My research lies at the intersection of computer vision and deep learning, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
   </p>
 
   <p>Currently, I am interested in developing AI systems that can model, represent, and animate 3D humans/avatars. Ultimately, my research goal is to understand humans through AI — from recognizing and decoding human minds and behaviors to modeling and representing human appearances in digital form.
@@ -232,7 +236,7 @@ Please stay tuned for what’s next!</li>
     </div>
   </section> -->
 
-  <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+  <section id="projects" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
 <div class="row">
@@ -403,7 +407,7 @@ Please stay tuned for what’s next!</li>
 	<li style="line-height:150%"><b>Outstanding TA Award 2022, KAIST</b></li>
 	- <i>Awarded to TAs who earned the highest ratings on KAIST CS student survey</i> -->
   <li style="line-height:150%"><b>3rd Place of RHOBIN Challenge at CVPR 2024 </b> <a href="/resources/certificate/certificate_rhobin.pdf">[Certificate]</a></li>
-	- <i>3D body contact estimation from single RGB images.</i>
+	- <i>Track: 3D body contact estimation from single RGB images.</i>
 	<!-- <li><b>Excellence Award <span style="color:#BB2222">(Mayoral Award)</span> at Korea Software Convergence Hackathon 2019, Ministry of Science and ICT of Korea</b></li>
 	- <i>Developed an automatic traffic light control system based on reinforcement learning</i>
 	<li><b>Honorable Mention Award at Undergraduate Student Paper Competition 2019, Korea Software Congress (KSC) and Korea Computer Congress (KCC)</b></li>
@@ -447,7 +451,7 @@ Please stay tuned for what’s next!</li>
     </div>
   </section> -->
 
-  <section id="Skills" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+  <section id="skills" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
 <div class="row">
