--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
       </ul>
     </div>
 
-    <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+    <!-- <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
 
       <li class="nav-item">
         <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
       </li>
 
-    </ul>
+    </ul> -->
 
   </div>
 </nav>
@@ -385,7 +385,7 @@ Please stay tuned for what’s next!</li>
               <div class="description">
                 <p class="title">Facial Texure Perceiver: Towards High-Fidelity Facial Texture Recovery with Input-Level Inductive Biased Perceiver IO</p>
     	    <p class="authors"><b>Seungeun Lee</b></p>
-    	    <p class="venue">ICASSP 2023<br>
+    	    <p class="venue">ICASSP, 2023<br>
                 <p class="resources">
     	    <a href="https://ieeexplore.ieee.org/document/10096776">[Paper]</a> 
 
