--- a/index.html
+++ b/index.html
@@ -118,8 +118,6 @@
         <li class="nav-item">
           <a class="nav-link " href="/#skills" data-target="#skills"><span>Skills</span></a>
         </li>
-
-
       </ul>
     </div>
 
@@ -236,57 +234,46 @@ Please stay tuned for what’s next!</li>
     </div>
   </section> -->
 
-  <section id="projects" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
-    <div class="container">
-
-<div class="row">
-
+<section id="projects" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+<div class="container">
+  <div class="row">
     <div class="col-lg-12">
-      <h1>Featured Projects</h1>
-    </div>
-    <div class="row">
-        <ul class="ul-papers">
-
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
-                </div>
+        <h1>Featured Projects</h1>
+      </div>
+      <div class="row">
+          <ul class="ul-papers">
+            <li>
+              <div class="img">
+                <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
-                <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
-    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Ilwoo Lyu<br/></p>
-    	    <p class="venue">NeurIPS 2025<br>
-                <p class="resources">
-    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
-
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
-                </div>
+                <p class="title">Joint Body-Face Neural Rigging for Expressive 3D Avatars</p>
+                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
+                <p class="venue"><b>Keyword: </b>3D Rigging, Rigging Data Creation/Collection, and Blender<br>
+                <p class="resources"><a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> 
+            <li>
+              <div class="img">
+                <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
-                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
-    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Seungeun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
-    	    <p class="venue">NeurIPS 2025<br>
-                <p class="resources">
-    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
-
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
-                </div>
+                <p class="title">Generalizable and Feed-forward Gaussian Model for Animatable 3D Talking Avatars</p>
+                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
+                <p class="venue"><b>Keyword: </b>Large Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
+                <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
+            <li>
+              <div class="img">
+                <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
-                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
-    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Seungeun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
-    	    <p class="venue">NeurIPS 2025<br>
-                <p class="resources">
-    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
-
-
-
-        </ul>
-    </div>
+                <p class="title">Bring the Clothed Avatars to Life: Learning to Animate 3D Gaussian Avatars from a Single Image</p>
+                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
+                <p class="venue"><b>Keyword: </b>Animatable 3D Avatars, 3D Gaussian Splatting<br>
+                <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
+          </ul>
+      </div>
+  </div>
 </div>
-    </div>
-  </section>
+</section>
 
 
   <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
@@ -398,27 +385,17 @@ Please stay tuned for what’s next!</li>
 
 <section id="awards" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
-
-<div class="row">
-	<div class="col-lg-12">
-      <h1>Awards &amp; Honors</h1>
-<ul>
-	<!-- <li style="line-height:150%"><b>Outstanding Reviewer 2024, ECCV</b></li>
-	<li style="line-height:150%"><b>Outstanding TA Award 2022, KAIST</b></li>
-	- <i>Awarded to TAs who earned the highest ratings on KAIST CS student survey</i> -->
-  <li style="line-height:150%"><b>3rd Place of RHOBIN Challenge at CVPR 2024 </b> <a href="/resources/certificate/certificate_rhobin.pdf">[Certificate]</a></li>
-	- <i>Track: 3D body contact estimation from single RGB images.</i>
-	<!-- <li><b>Excellence Award <span style="color:#BB2222">(Mayoral Award)</span> at Korea Software Convergence Hackathon 2019, Ministry of Science and ICT of Korea</b></li>
-	- <i>Developed an automatic traffic light control system based on reinforcement learning</i>
-	<li><b>Honorable Mention Award at Undergraduate Student Paper Competition 2019, Korea Software Congress (KSC) and Korea Computer Congress (KCC)</b></li>
-	- <i>Proposed a method to reduce the blocking effects of DCT-based X-ray grid line suppression techniques</i>
-	<li><b>Silver Prize at Undergraduate Student Paper Competition 2018, Korea Information Processing Society (KIPS)</b></li>
-	- <i>Proposed a DCT-based X-ray grid line suppression method using dynamic segmentation</i> -->
-</ul>
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Awards &amp; Honors</h1>
+          <ul>
+            <li style="line-height:150%"><b>3rd Place of RHOBIN Challenge at CVPR 2024 </b> <a href="/resources/certificate/certificate_rhobin.pdf">[Certificate]</a></li>
+            - <i>Track: 3D body contact estimation from single RGB images.</i>
+          </ul>
+        </div>
+      </div>
     </div>
-</div>
-    </div>
-  </section>
+</section>
 
 
 <!-- <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
@@ -451,21 +428,21 @@ Please stay tuned for what’s next!</li>
     </div>
   </section> -->
 
-  <section id="skills" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
-    <div class="container">
-
-<div class="row">
-    <div class="col-lg-12" style="line-height: 180% !important;">
-      <h1>Skills</h1>
-<ul>
-	<li><b>Main Language & Deep Learning Library: </b>Python & Pytorch</li>
-	<li><b>Familiar Libraries: </b>SMPL-X, Pytorch3D, Trimesh </li>
-	<li><b>Familiar Graphic Tool: </b>Blender</li>
-</ul>
+<section id="skills" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12" style="line-height: 180% !important;">
+        <h1>Skills</h1>
+          <ul>
+            <li><b>Main Language & Deep Learning Library: </b>Python & Pytorch</li>
+            <li><b>Familiar Libraries: </b>SMPL-X, Pytorch3D, Trimesh </li>
+            <li><b>Familiar 3D Graphic Tool: </b>Blender</li>
+            <li><b>Familiar Research Domain: </b>3D Human Pose/Shape Estimation, Human Motion Capture, Animatable 3D Avatars, 3D Gaussian Splatting, Geometric Deep Learning on the Sphere, and Cortical Surface Registration</li>
+          </ul>
+      </div>
     </div>
-</div>
-    </div>
-  </section>
+  </div>
+</section>
 
 
 
