--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Joint Body-Face Neural Rigging for Expressive 3D Avatars</p>
-                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
-                <p class="venue"><b>Keyword: </b>3D Rigging, Rigging Data Creation/Collection, and Blender<br>
+                <p class="authors"><b>Keyword: </b>3D Rigging, Rigging Data Creation/Collection, and Blender<br>
+                <p class="authors"><b>Project Member</b>: <u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> 
             <li>
               <div class="img">
