--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Joint Body-Face Neural Rigging for Expressive 3D Avatars</p>
-                <p class="authors"><b>Keyword: </b>3D Rigging, Rigging Data Creation/Collection, and Blender<br>
+                <p class="authors"><b>Keyword: </b>3D Rigging, Data Creation/Collection, and Blender<br>
                 <p class="authors"><b>Project Member</b>: <u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> 
             <li>
@@ -257,8 +257,8 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Generalizable and Feed-forward Gaussian Model for Animatable 3D Talking Avatars</p>
-                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
-                <p class="venue"><b>Keyword: </b>Large Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
+                <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
+                <p class="authors"><b>Keyword: </b>Large Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
                 <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
             <li>
               <div class="img">
@@ -266,8 +266,8 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Bring the Clothed Avatars to Life: Learning to Animate 3D Gaussian Avatars from a Single Image</p>
-                <p class="authors"><b>Project Member: Seungeun Lee</b></p>
-                <p class="venue"><b>Keyword: </b>Animatable 3D Avatars, 3D Gaussian Splatting<br>
+                <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
+                <p class="authors"><b>Keyword: </b>Animatable 3D Avatars, 3D Gaussian Splatting<br>
                 <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
           </ul>
       </div>
@@ -334,7 +334,7 @@ Please stay tuned for what’s next!</li>
           
           <li>
                 <div class="img">
-                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                  <img src="/resources/paper/sgcc.png" class="img-responsive" alt="">
                 </div>
               <div class="description">
                 <p class="title">Spherical Diffusion Process for Score-Guided Cortical Correspondence via Spectral Attention</p>
@@ -345,7 +345,7 @@ Please stay tuned for what’s next!</li>
 
           <li>
                 <div class="img">
-                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                  <img src="/resources/paper/spharm-reg.png" class="img-responsive" alt="">
                 </div>
               <div class="description">
                 <p class="title">SPHARM-Reg: Unsupervised Cortical Surface Registration using Spherical Harmonics</p>
@@ -356,7 +356,7 @@ Please stay tuned for what’s next!</li>
 
           <li>
                 <div class="img">
-                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                  <img src="/resources/paper/dspharm.png" class="img-responsive" alt="">
                 </div>
               <div class="description">
                 <p class="title">Leveraging Input-Level Feature Deformation with Guided-Attention for Sulcal Labeling</p>
