--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Generalizable and Feed-forward Gaussian Model for Animatable 3D Talking Avatars</p>
-                <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
                 <p class="authors"><b>Keyword: </b>Large Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
+                  <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
             <li>
               <div class="img">
@@ -266,8 +266,8 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Bring the Clothed Avatars to Life: Learning to Animate 3D Gaussian Avatars from a Single Image</p>
-                <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
                 <p class="authors"><b>Keyword: </b>Animatable 3D Avatars, 3D Gaussian Splatting<br>
+                  <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
           </ul>
       </div>
@@ -319,69 +319,67 @@ Please stay tuned for what’s next!</li>
     </div>
   </section>
 
-  <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
-    <div class="container">
-
-<div class="row">
-
-    <div class="col-lg-12">
-      <h1>Publications</h1>
-    </div>
+<section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+  <div class="container">
     <div class="row">
-        <ul class="ul-papers">
-		<!-- * Full publication list (including domestic publications) is available in my <a href="resources/cv.pdf">CV</a>. -->
-        
-          
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/sgcc.png" class="img-responsive" alt="">
-                </div>
+        <div class="col-lg-12">
+          <h1>Publications</h1>
+        </div>
+        <div class="row">
+          <ul class="ul-papers">
+            <!-- * Full publication list (including domestic publications) is available in my <a href="resources/cv.pdf">CV</a>. -->
+            <li>
+              <div class="img">
+                <img src="/resources/paper/sgcc.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
                 <p class="title">Spherical Diffusion Process for Score-Guided Cortical Correspondence via Spectral Attention</p>
-    	    <p class="authors"><b>Seungeun Lee</b>, Sergey Pyatkovskiy, Jaejun Yoo, Ilwoo Lyu<br/></p>
-    	    <p class="venue">MICCAI, 2025<br>
+                <p class="authors"><b>Keyword: </b>Cortical Surface Registration, Score-based Diffusion Process on the Sphere<br/></p>
+                <p class="authors"><b>Seungeun Lee</b>, Sergey Pyatkovskiy, Jaejun Yoo, Ilwoo Lyu<br/></p>
+                <p class="venue">MICCAI, 2025<br>
                 <p class="resources">
-    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
-
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/spharm-reg.png" class="img-responsive" alt="">
-                </div>
+                  <!-- <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> -->
+                  <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+            <li>
+              <div class="img">
+                <img src="/resources/paper/spharm-reg.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
                 <p class="title">SPHARM-Reg: Unsupervised Cortical Surface Registration using Spherical Harmonics</p>
-    	    <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Sunghwa Ryu, Ilwoo Lyu<br/></p>
-    	    <p class="venue">IEEE Transaction on Medical Imaging, 2025<br>
+                <p class="authors"><b>Keyword: </b>Cortical Surface Registration, Spherical Harmonic Analysis<br/></p>
+                <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Sunghwa Ryu, Ilwoo Lyu<br/></p>
+                <p class="venue">IEEE Transaction on Medical Imaging, 2025<br>
                 <p class="resources">
-    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://ieeexplore.ieee.org/document/11045740">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+                  <a href="https://ieeexplore.ieee.org/document/11045740">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
 
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/dspharm.png" class="img-responsive" alt="">
-                </div>
+            <li>
+              <div class="img">
+                <img src="/resources/paper/dspharm.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
                 <p class="title">Leveraging Input-Level Feature Deformation with Guided-Attention for Sulcal Labeling</p>
-    	    <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Ethan Willbrand, Benjamin Parker, Silvia Bunge, Kevin Weiner, Ilwoo Lyu<br/></p>
-    	    <p class="venue">IEEE Transaction on Medical Imaging, 2024<br>
+                <p class="authors"><b>Keyword: </b>Sulcal Labeling, Diffeomorphic Deformation<br/></p>
+                <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Ethan Willbrand, Benjamin Parker, Silvia Bunge, Kevin Weiner, Ilwoo Lyu<br/></p>
+                <p class="venue">IEEE Transaction on Medical Imaging, 2024<br>
                 <p class="resources">
-    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://ieeexplore.ieee.org/document/10695448">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+                  <a href="https://ieeexplore.ieee.org/document/10695448">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
 
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/face-texture-perceiver-2.png" class="img-responsive" alt="">
-                </div>
+            <li>
+              <div class="img">
+                <img src="/resources/paper/face-texture-perceiver-2.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
                 <p class="title">Facial Texure Perceiver: Towards High-Fidelity Facial Texture Recovery with Input-Level Inductive Biased Perceiver IO</p>
-    	    <p class="authors"><b>Seungeun Lee</b></p>
-    	    <p class="venue">ICASSP, 2023<br>
+                <p class="authors"><b>Keyword: </b>3D Face Reconstruction<br/></p>
+                <p class="authors"><b>Seungeun Lee</b></p>
+                <p class="venue">ICASSP, 2023<br>
                 <p class="resources">
-    	    <a href="https://ieeexplore.ieee.org/document/10096776">[Paper]</a> 
-
-
-        </ul>
+                  <a href="https://ieeexplore.ieee.org/document/10096776">[Paper]</a> 
+          </ul>
+      </div>
     </div>
-</div>
-    </div>
-  </section>
+  </div>
+</section>
 
 <section id="awards" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
