--- a/index.html
+++ b/index.html
@@ -276,48 +276,40 @@ Please stay tuned for what’s next!</li>
 </section>
 
 
-  <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
-    <div class="container">
-
-<div class="row">
-
-    <div class="col-lg-12">
-      <h1>Preprint</h1>
-    </div>
+<section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
+  <div class="container">
     <div class="row">
-        <ul class="ul-papers">
-
-
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
-                </div>
+      <div class="col-lg-12">
+        <h1>Preprint</h1>
+      </div>
+      <div class="row">
+          <ul class="ul-papers">
+            <li>
+              <div class="img">
+                <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
-                <p class="title">MPMAvatar: Learning 3D Gaussian Avatars with Accurate and Robust Physics-Based Dynamics</p>
-    	    <p class="authors">Changmin Lee, <b>Seungeun Lee</b>, Ilwoo Lyu<br/></p>
-    	    <p class="venue">NeurIPS 2025<br>
-                <p class="resources">
-    	    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://arxiv.org/pdf/2510.01619">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+                  <p class="title">Distilling Video Diffusion Model to Animate Expressive 3D Humans from a Photo</p>
+                  <p class="authors"><b>Seungeun Lee</b>, Gyeong-Moon Park<br/></p>
+                  <!-- <p class="venue">Preprint<br> -->
+                  <p class="resources">
+                    <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="/resources/paper/paper-dvdm.pdf">[Paper]</a> 
 
-          <li>
-                <div class="img">
-                  <img src="/resources/paper/origen.png" class="img-responsive" alt="">
-                </div>
+            <li>
+              <div class="img">
+                <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+              </div>
               <div class="description">
-                <p class="title">ORIGEN: Zero-Shot 3D Orientation Grounding in Text-to-Image Generation</p>
-    	    <p class="authors">Yunhong Min*, Daehyeon Choi*, Kyeongmin Yeo, <b>Seungeun Lee</b>, Minhyuk Sung (* equal contributions)<br/></p>
-    	    <p class="venue">NeurIPS 2025<br>
+                <p class="title">Secondary Motion-aware 3D Gaussian Avatars for Modeling Dynamic Appearances</p>
+                <p class="authors"><b>Seungeun Lee</b>, Gyeong-Moon Park<br/></p>
+                <!-- <p class="venue">NeurIPS 2025<br> -->
                 <p class="resources">
-    	    <a href="https://origen2025.github.io/">[Project]</a> <a href="https://arxiv.org/pdf/2503.22194">[Paper]</a> <a href="https://github.com/KAIST-Visual-AI-Group/ORIGEN">[Code]</a>
-
-
-
-
-        </ul>
+                  <a href="https://origen2025.github.io/">[Project]</a> <a href="/resources/paper/paper-smaga.pdf">[Paper]</a> 
+          </ul>
+      </div>
     </div>
-</div>
-    </div>
-  </section>
+  </div>
+</section>
 
 <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
   <div class="container">
@@ -339,7 +331,7 @@ Please stay tuned for what’s next!</li>
                 <p class="venue">MICCAI, 2025<br>
                 <p class="resources">
                   <!-- <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> -->
-                  <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+                  <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> <a href="/resources/paper/poster-sgcc.pdf">[Poster]</a>
             <li>
               <div class="img">
                 <img src="/resources/paper/spharm-reg.png" class="img-responsive" alt="">
@@ -362,7 +354,7 @@ Please stay tuned for what’s next!</li>
                 <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Ethan Willbrand, Benjamin Parker, Silvia Bunge, Kevin Weiner, Ilwoo Lyu<br/></p>
                 <p class="venue">IEEE Transaction on Medical Imaging, 2024<br>
                 <p class="resources">
-                  <a href="https://ieeexplore.ieee.org/document/10695448">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a>
+                  <a href="https://ieeexplore.ieee.org/document/10695448">[Paper]</a> <a href="https://github.com/Shape-Lab/DSPHARM-Net">[Code]</a>
 
             <li>
               <div class="img">
